--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ag-grid-community": "^28.2.0",
+    "ag-grid-vue": "^28.2.0",
+    "axios": "^1.1.3",
+    "bootstrap": "^5.2.2",
+    "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "lodash": "^4.17.21",
+    "vue": "^2.7.13",
+    "vue-property-decorator": "^8.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -19,6 +26,7 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "json-server": "^0.17.1",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
